# ClipRust

./: .env  .env.sample  CONTRIBUTING.md  LICENSE  README.md  iconGenerator.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  util.rs
