[package]
name = "cliprust"
version = "1.0.0"
description = "your clip board manager"
authors = ["milinbhakta"]
license = ""
repository = ""
default-run = "cliprust"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "*", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["global-shortcut-all", "shell-open"] }
clipboard = "0.5"
lazy_static = "1.4.0"
thiserror = "1.0"
clipboard-master = "3.1.3"
base64 = "0.21.5"
tempfile = "3.8.1"
image = "0.24.7"
arboard = "3.2.1"
clipboard-files = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
